{
    "name": "PlayerMovementInput",
    "maps": [
        {
            "name": "Keyboard",
            "id": "e7d1f756-4127-4005-8c64-a3f3d40cadc1",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "8c188039-2934-4f88-b3be-ebf5e73e4fbf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "857de386-a290-42ae-bbdc-1d91f26f4fc4",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bd463ccb-5c86-410d-bb63-4d1eb6bfb878",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6335ba43-47e2-45ed-9dc6-875d46e4a6eb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5f7a2a01-5f7a-4cf4-ad17-e965b355b234",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3a894348-ec8a-4c6b-93a8-1f2f7faea82c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "8d8240d3-ed36-4704-afd4-2c15ef99f901",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "d18d4454-d482-4405-ae2c-f1bb272e5dfc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "a497ddc1-5b69-4e16-838a-fc6e02c20dd5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7835e613-5c80-4d82-b97c-05bb74d27822",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa28ca48-3e85-4326-9b2f-e2b1a04cb351",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}